--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </head>
 <body>
-
 <div class="container-fluid">
-    <a>Pirmas</a> <br>
-    <a href="receptai.html">Antras</a> <br>
+  <h1 class="antraste">Mano Darbai</h1> <br>
+</div>
+<div class="container-fluid">
+    <a href="pirmas]/pirmas.html">Pirmas</a> <br>
+    <a href="antras/receptai.html">Antras</a> <br>
     <a>Trecias</a> <br>
 </div>
 
