--- a/trecias/apie.html
+++ b/trecias/apie.html
@@ -22,7 +22,7 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="ketvirtas.html">Rokas</a>
+  <a class="navbar-brand" href="trecias/ketvirtas.html">Rokas</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
