--- a/trecias/apie.html
+++ b/trecias/apie.html
@@ -29,7 +29,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="apie.html">Apie</a>
+        <a class="nav-link" href="trecias/apie.html">Apie</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Kazkas</a>
