--- a/trecias/ketvirtas.html
+++ b/trecias/ketvirtas.html
@@ -22,14 +22,14 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="ketvirtas.html">Rokas</a>
+  <a class="navbar-brand" href="trecias/ketvirtas.html">Rokas</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="apie.html">Apie</a>
+        <a class="nav-link" href="trecias/apie.html">Apie</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Kazkas</a>
@@ -53,14 +53,14 @@
       <div>
       <h2>Mano keliones</h2>
       <h5>Jan 10, 2019</h5>
-      <div class="fakeimg"><a href = "kitas1.html"><img style="height: 260px; width: 730px;" src="https://photos.mandarinoriental.com/is/image/MandarinOriental/new-york-2017-columbus-circle-01?wid=2880&hei=1280&fmt=jpeg&crop=6,1064,4928,2190&anchor=2032,2134&qlt=75,0&op_sharpen=0&resMode=sharp2&op_usm=0,0,0,0&iccEmbed=0&printRes=72&fit=crop" alt="paveiksliukas"></a>
+      <div class="fakeimg"><a href = "trecias/kitas1.html"><img style="height: 260px; width: 730px;" src="https://photos.mandarinoriental.com/is/image/MandarinOriental/new-york-2017-columbus-circle-01?wid=2880&hei=1280&fmt=jpeg&crop=6,1064,4928,2190&anchor=2032,2134&qlt=75,0&op_sharpen=0&resMode=sharp2&op_usm=0,0,0,0&iccEmbed=0&printRes=72&fit=crop" alt="paveiksliukas"></a>
       </div>
       <p>Čia yra informacija apie šalis, kurias esu aplankęs</p>
       </div>
       <br>
       <h2>Šalys, kurias noriu aplankyti</h2>
       <h5>Jan 10, 2019</h5>
-      <div class="fakeimg"><a href = "kitas2.html"><img style="height: 260px; width: 730px;" src="https://strawberrytours.com/images/RioDeJaneiro/Tours/FreeHistoricalCenterTourOfRio/rio-de-janeiro-cover-v3.jpg" alt="paveiksliukas"></a>
+      <div class="fakeimg"><a href = "trecias/kitas2.html"><img style="height: 260px; width: 730px;" src="https://strawberrytours.com/images/RioDeJaneiro/Tours/FreeHistoricalCenterTourOfRio/rio-de-janeiro-cover-v3.jpg" alt="paveiksliukas"></a>
       </div>
       <p>Čia yra informacija apie šalis, kurias noriu aplankyti</p>
     </div>
