--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container-fluid">
     <a href="pirmas]/pirmas.html">Pirmas</a> <br>
     <a href="antras/receptai.html">Antras</a> <br>
-    <a>Trecias</a> <br>
+    <a href="trecias/ketvirtas.html">Trecias</a> <br>
 </div>
 
 </body>
